@@ -15,6 +15,8 @@ Prerequisites
     * polib (https://bitbucket.org/izi/polib/wiki/Home)
     * python-sql 0.2 or later (http://code.google.com/p/python-sql/)
     * Optional: psycopg 2 or later (http://www.initd.org/)
+    * Optional: psycopg2cffi 2.5.0 or later
+      (http://github.com/chtd/psycopg2cffi)
     * Optional: MySQL-python (http://sourceforge.net/projects/mysql-python/)
     * Optional: pywebdav 0.9.8 or later (http://code.google.com/p/pywebdav/)
     * Optional: pydot (http://code.google.com/p/pydot/)
